# next-codablejson-plugin

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: cargo.yml
src/: app.rs  lib.rs  page.rs  utils.rs
tests/: fixture.rs
tests/fixture/app/children/: code.js  output.js
tests/fixture/app/general/: code.js  output.js
tests/fixture/app/member/: code.js  output.js
tests/fixture/page/skip/gip-in-app-js/: output.js
tests/fixture/page/transform/export-from/page/: output.js
tests/fixture/page/transform/export-from/props/: output.js
tests/fixture/page/transform/general/arrow/: output.js
tests/fixture/page/transform/general/class/: output.js
tests/fixture/page/transform/general/function/: output.js
tests/fixture/page/transform/get-initial-props/class/: output.js
tests/fixture/page/transform/get-initial-props/function/: output.js
tests/fixture/page/transform/get-initial-props/function-export-page-first/: output.js
tests/fixture/page/transform/get-static-props-with-paths/: output.js
tests/fixture/page/transform/import-export/: output.js
tests/fixture/page/transform/mutable/: output.js
tools/: client.tsx  tools.tsx
