[package]
name = "next_codablejson"
version = "0.0.1"
edition = "2021"
authors = ["https://github.com/serg-and"]
description = "SWC Plugin of CodableJSON for Next.js"
license = "MIT/Apache-2.0"
repository = "https://github.com/serg-and/next-codablejson-plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
# match next@15.4.0
swc_core = { version = "54.0.*", features = [
    "ecma_plugin_transform",
    "ecma_ast",
    "ecma_utils",
    "ecma_visit",
    "ecma_transforms",
    "ecma_parser",
    "common",
] }

[dev-dependencies]
testing = "0.33.11"

[profile.release]
lto = true
strip = true
